testData/highlighting/stringSliceWithThirdIndex.go
package main

var _ = "asdasd"[1:2<error descr="Invalid operation \"asdasd\"[1:2:3] (3-index slice of string)">:3</error>]

func main(){

}